--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-ZITADEL_BASE_URL=http://localhost:8080
-ZITADEL_SERVICE_ACCOUNT_TOKEN=lW88vyty1jTQpzCBin5KZUeU9-7C4LQ8J4v9VOQQk5RqwwHuGk5cH9RbEN4rXRBP07T-a1g
+ZITADEL_DOMAIN=http://localhost:8080
+SERVICE_ACCOUNT_TOKEN=lW88vyty1jTQpzCBin5KZUeU9-7C4LQ8J4v9VOQQk5RqwwHuGk5cH9RbEN4rXRBP07T-a1g
 PROJECT_ID=334519388533161987
 PROJECT_GRANT_ID=334520193805975555
 REDIS_ADDR=localhost:6379
