--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ZITADEL_DOMAIN=http://localhost:8080
 SERVICE_ACCOUNT_TOKEN=lW88vyty1jTQpzCBin5KZUeU9-7C4LQ8J4v9VOQQk5RqwwHuGk5cH9RbEN4rXRBP07T-a1g
 PROJECT_ID=339813964084936706
-REDIS_ADDR=redis:6379
+REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=
 PORT=8081
